修复一个恶性漏洞，并引入使用注解处理器的更好的代码风格