@@ -11,9 +11,6 @@ ext{
 group 'com.github.EB-wilson'
 version JDERVersion
 
-sourceCompatibility = 17
-targetCompatibility = 8
-
 publishing {
   publications {
     maven(MavenPublication) {
@@ -33,15 +30,5 @@ generateMetadataFileForMavenPublication{
 allprojects{
   tasks.withType(JavaCompile){
     options.encoding = "UTF-8"
-
-    options.fork = true
-    options.forkOptions.jvmArgs.addAll([
-        "--add-opens", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
-        "--add-opens", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
-        "--add-opens", "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
-        "--add-opens", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
-        "--add-opens", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
-        "--add-opens", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
-    ])
   }
 }
